--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ authors = [{name = "avcopan", email = "avcopan@gmail.com"}]
 dependencies = []
 name = "pixi-template"
 requires-python = ">= 3.11"
-version = "0.1.0"
+version = "0.2024.0"
 
 [build-system]
 build-backend = "hatchling.build"
@@ -12,7 +12,7 @@ requires = ["hatchling"]
 # Pixi configurations
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-arm64"]
+platforms = ["linux-64"]
 
 [tool.pixi.tasks]
 
@@ -39,6 +39,7 @@ pytest = ">=9.0.1"
 pytest-cov = ">=7.0.0"
 ruff = ">=0.14.7"
 lefthook = ">=2.0.6,<3"
+bumpver = ">=2025.1131,<2026"
 
 [tool.pixi.feature.dev.pypi-dependencies]
 ty = "*"
@@ -62,3 +63,24 @@ convention = "numpy"
 testpaths = ["tests", "src"]
 addopts = "--doctest-modules"
 doctest_optionflags = "NORMALIZE_WHITESPACE"
+
+# Bumpver configurations
+[tool.bumpver]
+current_version = "0.2024.0"
+version_pattern = "MAJOR.YYYY.PATCH"
+commit_message = "bump version {old_version} -> {new_version}"
+tag_message = "{new_version}"
+tag_scope = "default"
+pre_commit_hook = "scripts/lock.sh"
+post_commit_hook = ""
+commit = true
+tag = true
+push = true
+
+[tool.bumpver.file_patterns]
+"pyproject.toml" = [
+    'version = "{version}"',
+]
+"src/pixi_template/__init__.py" = [
+    '__version__ = "{version}"',
+]
