--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ fmt = { cmd="ruff format ." }
 lint = { cmd="ruff check . --fix" }
 types = { cmd="ty check" }
 test = { cmd="pytest" }
+bumpver = { cmd="bumpver" }
 all = { depends-on = ["fmt", "lint", "types", "test"] }
 
 [tool.pixi.pypi-dependencies]
