--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ platforms = ["linux-64"]
 
 [tool.pixi.feature.dev.tasks]
 fmt = { cmd="ruff format ." }
-lint = { cmd="ruff check . --fix" }
+lint = { cmd="ruff check . --fix --exclude '**/*.ipynb'" }
 types = { cmd="ty check" }
 test = { cmd="pytest" }
 bumpver = { cmd="bumpver" }
@@ -54,10 +54,6 @@ ignore = [
     "TID252",   # relative import
     "D203",     # confict: incorrect blank line before class (uses D211 instead)
     "D213",     # conflict: multi-line summary second line (uses D212 instead)
-]
-exclude = [
-    "*.ipynb",
-    "**/*.ipynb",
 ]
 
 [tool.ruff.lint.pydocstyle]
